[gd_scene load_steps=11 format=1]

[ext_resource path="res://addons/com.indicainkwell.iosdeploy/resources/apple-icon@1.png" type="Texture" id=1]
[ext_resource path="res://addons/com.indicainkwell.iosdeploy/nodes/apple_button.gd" type="Script" id=2]
[ext_resource path="res://addons/com.indicainkwell.iosdeploy/nodes/xcode_project.gd" type="Script" id=3]
[ext_resource path="res://addons/com.indicainkwell.iosdeploy/nodes/background_execute.gd" type="Script" id=4]
[ext_resource path="res://addons/com.indicainkwell.iosdeploy/nodes/device_button.gd" type="Script" id=5]
[ext_resource path="res://addons/com.indicainkwell.iosdeploy/classes/iOSDeployHelper.gd" type="Script" id=6]
[ext_resource path="res://addons/com.indicainkwell.iosdeploy/nodes/deploy_button.gd" type="Script" id=7]
[ext_resource path="res://addons/com.indicainkwell.iosdeploy/nodes/settings_button.gd" type="Script" id=8]
[ext_resource path="res://addons/com.indicainkwell.iosdeploy/classes/iOSDeployConfig.gd" type="Script" id=9]
[ext_resource path="res://addons/com.indicainkwell.iosdeploy/nodes/task_queue.gd" type="Script" id=10]

[node name="apple_button" type="Button"]

hint/tooltip = "Left Click: Deploy
Right Click: Options"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 28.0
margin/bottom = 22.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 1 )
flat = false
script/script = ExtResource( 2 )

[node name="xcode" type="Node" parent="."]

editor/display_folded = true
script/script = ExtResource( 3 )

[node name="bgexecute" type="Node" parent="xcode"]

script/script = ExtResource( 4 )

[node name="devices" type="ConfirmationDialog" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 450.0
margin/bottom = 312.0
popup/exclusive = false
window/title = "Devices"
dialog/text = "Choose device to deploy to"
dialog/hide_on_ok = true
script/script = ExtResource( 5 )

[node name="device_list" type="ItemList" parent="devices"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 5.0
margin/top = 30.0
margin/right = 5.0
margin/bottom = 30.0

[node name="ios_deploy" type="Node" parent="devices"]

script/script = ExtResource( 6 )

[node name="detect_timer" type="Timer" parent="devices"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = false

[node name="deploy" type="PopupMenu" parent="."]

editor/display_folded = true
visibility/visible = false
anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = -200.0
margin/bottom = 20.0
popup/exclusive = false
items = [  ]
script/script = ExtResource( 7 )

[node name="ios_deploy" type="Node" parent="deploy"]

script/script = ExtResource( 6 )

[node name="settings_window" type="WindowDialog" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -9.0
margin/top = -99.0
margin/right = 575.0
margin/bottom = 225.0
popup/exclusive = false
window/title = "iOS Deploy Settings"
script/script = ExtResource( 8 )

[node name="Tree" type="Tree" parent="settings_window"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="FileDialog" type="FileDialog" parent="settings_window"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 585.0
margin/bottom = 323.0
popup/exclusive = false
window/title = "Open a Directory"
dialog/hide_on_ok = true
mode = 2
access = 2
filters = StringArray( ".xcodeproj;Xcode Project" )
show_hidden_files = false

[node name="config" type="Node" parent="settings_window"]

script/script = ExtResource( 9 )

[node name="task_queue" type="Node" parent="."]

script/script = ExtResource( 10 )

[node name="_options_menu" type="PopupMenu" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 142.0
margin/bottom = 124.0
popup/exclusive = false
items = [ "Show Settings", null, false, false, false, 0, 0, null, "", false, "Show Devices", null, false, false, false, 1, 0, null, "", false, "-", null, false, false, false, 2, 0, null, "", true, "Build Xcodeproj", null, false, false, false, 3, 0, null, "", false, "Item 4", null, false, false, false, 4, 0, null, "", true, "Deploy Options", null, false, false, false, 5, 0, null, "", false ]
hide_on_item_selection = false

[node name="progress_bar" type="ProgressBar" parent="."]

visibility/visible = false
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 0.0
margin/bottom = -1.0
range/min = 0.0
range/max = 1.0
range/step = 0.1
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[connection signal="pressed" from="." to="." method="_on_pressed"]

[connection signal="built" from="xcode" to="." method="_on_xcode_project_built"]

[connection signal="executed" from="xcode/bgexecute" to="xcode" method="_on_bgexecute_executed"]

[connection signal="about_to_show" from="devices" to="devices" method="_on_about_to_show"]

[connection signal="confirmed" from="devices" to="devices" method="_on_confirmed"]

[connection signal="multiple_detected" from="devices" to="." method="_on_devices_multiple_detected"]

[connection signal="new_selected" from="devices" to="devices" method="_on_devices_new_selected"]

[connection signal="none_detected" from="devices" to="." method="_on_devices_none_detected"]

[connection signal="one_detected" from="devices" to="." method="_on_devices_one_detected"]

[connection signal="item_activated" from="devices/device_list" to="devices" method="_on_device_list_item_activated"]

[connection signal="detect_devices_result" from="devices/ios_deploy" to="devices" method="_on_ios_deploy_detect_devices_result"]

[connection signal="timeout" from="devices/detect_timer" to="devices" method="_on_detect_timer_timeout"]

[connection signal="about_to_show" from="deploy" to="deploy" method="_on_about_to_show"]

[connection signal="failure" from="deploy" to="." method="_on_deploy_failure"]

[connection signal="item_pressed" from="deploy" to="deploy" method="_on_item_pressed"]

[connection signal="success" from="deploy" to="." method="_on_deploy_success"]

[connection signal="deploy_remote_fs_result" from="deploy/ios_deploy" to="deploy" method="_on_deploy_finished"]

[connection signal="deploy_result" from="deploy/ios_deploy" to="deploy" method="_on_deploy_finished"]

[connection signal="about_to_show" from="settings_window" to="settings_window" method="_on_settings_window_about_to_show"]

[connection signal="popup_hide" from="settings_window" to="settings_window" method="_on_settings_window_popup_hide"]

[connection signal="item_activated" from="settings_window/Tree" to="settings_window" method="_on_tree_item_selected"]

[connection signal="item_selected" from="settings_window/Tree" to="settings_window" method="_on_tree_item_selected"]

[connection signal="dir_selected" from="settings_window/FileDialog" to="settings_window" method="_on_file_dialog_xcodeproj_chosen"]

[connection signal="finished" from="task_queue" to="." method="_on_task_queue_finished"]

[connection signal="finished_task" from="task_queue" to="." method="_on_task_queue_finished_task"]

[connection signal="item_pressed" from="_options_menu" to="." method="_on_options_menu_item_pressed"]


